--- a/less/variables.less
+++ b/less/variables.less
@@ -14,7 +14,7 @@
 @gray-light:             lighten(@gray-base, 60%);   // #999
 @gray-lighter:           lighten(@gray-base, 90%); // #eee
 
-@brand-primary:         #325D88;;
+@brand-primary:         #325D88;
 @brand-success:         #93C54B;
 @brand-info:            #29ABE0;
 @brand-warning:         #F47C3C;
